terraform/security-groups.tf
resource "aws_security_group" "web_sg" {
  name        = "northpeak-web-sg"
  description = "Allow HTTP HTTPS and SSH"
  vpc_id      = aws_vpc.main.id
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["110.224.87.96/32"]
  }

ingress {

  description = "HTTP from ALB"

  from_port = 80
  to_port   = 80

  protocol = "tcp"

  security_groups = [
    aws_security_group.alb_sg.id
  ]
}

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "northpeak-web-sg"
  }
}
